--- a/src/webaccess/iFolderWeb.hu.resx
+++ b/src/webaccess/iFolderWeb.hu.resx
@@ -98,10 +98,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NO.RA.SELECTED">
-    <value>Nincs beállítva helyreállítási ügynök, így nem lehetséges az azonosítási kifejezés helyreállítása.</value>
+    <value>Nincs beállítva helyreállítási ügynök, így nem lehetséges a hozzáférési kód helyreállítása.</value>
   </data>
   <data name="ACTION">
     <value>Művelet</value>
+  </data>
+  <data name="PASSWORDCHANGESUCCESS">
+    <value>Sikerült módosítani a jelszót. Jelentkezzen be az új jelszóval.</value>
   </data>
   <data name="ENTRY.NOFOLDERNAME">
     <value>Mappanevet kell megadni.</value>
@@ -109,11 +112,8 @@
   <data name="PUBLISHED">
     <value>Közzététel</value>
   </data>
-  <data name="LOGIN.SENDFAILED">
-    <value>Nem lehet kommunikálni az iFolder kiszolgálóval.</value>
-  </data>
-  <data name="ITALIAN">
-    <value>olasz</value>
+  <data name="IFOLDER.CONFIRMREMOVES">
+    <value>Biztosan meg kívánja szüntetni a kijelölt iFolder mappákhoz való hozzáférését?</value>
   </data>
   <data name="USERS">
     <value>Felhasználók</value>
@@ -202,17 +202,20 @@
   <data name="SLOVAK">
     <value>szlovák</value>
   </data>
+  <data name="PASSWORDCHANGEFAILED">
+    <value>Nem sikerült megváltoztatni a jelszót, </value>
+  </data>
   <data name="CHANGE.DELETE">
     <value>Törölve</value>
   </data>
+  <data name="RETURN">
+    <value>Visszatérés</value>
+  </data>
   <data name="SELECTRECOVERYAGENT">
-    <value>Azonosítási kifejezés helyreállítási ügynöke:</value>
+    <value>Hozzáférési kód helyreállítási ügynöke:</value>
   </data>
   <data name="PASSPHRASE_NOT_MATCH">
-    <value>Nem egyeznek az azonosítási kifejezések</value>
-  </data>
-  <data name="IFOLDER.CONFIRMREMOVES">
-    <value>Biztosan meg kívánja szüntetni a kijelölt iFolder mappákhoz való hozzáférését?</value>
+    <value>Nem egyeznek a hozzáférési kódok</value>
   </data>
   <data name="ENTRY">
     <value>Bejegyzés</value>
@@ -226,8 +229,8 @@
   <data name="ACCESSCONTROL">
     <value>Hozzáférés-vezérlés</value>
   </data>
-  <data name="HOMEQUOTA">
-    <value>Saját kvóta</value>
+  <data name="GROUPACCESSEXCEPTION">
+    <value>A tagság nem törölhető, mert az a csoport, amelyhez Ön tartozik, írásvédett joggal rendelkezik.</value>
   </data>
   <data name="HISTORYNOTAVAILABLE">
     <value>Ehhez az iFolder mappához nem érhetők el előzmények</value>
@@ -256,6 +259,9 @@
   <data name="APPLY">
     <value>Alkalmaz</value>
   </data>
+  <data name="REMOVEMEMBERSHIP">
+    <value>Tagság megszüntetése</value>
+  </data>
   <data name="SHOW">
     <value>Megjelenítés:</value>
   </data>
@@ -264,6 +270,9 @@
   </data>
   <data name="OWNED">
     <value>Tulajdonos</value>
+  </data>
+  <data name="AVAILABLE">
+    <value>Használható</value>
   </data>
   <data name="ENTRY.FILE">
     <value>Fájl:</value>
@@ -287,7 +296,7 @@
     <value>Nincs</value>
   </data>
   <data name="RIGHTS.READONLY">
-    <value>Csak olvasható</value>
+    <value>Csak olvasás</value>
   </data>
   <data name="IFOLDER.CONFIRMREMOVE">
     <value>Biztosan meg kívánja szüntetni az aktuális iFolder mappához való hozzáférését?</value>
@@ -295,8 +304,8 @@
   <data name="ACTIONS">
     <value>Műveletek</value>
   </data>
-  <data name="POLICY">
-    <value>Házirend</value>
+  <data name="NEWPASSWORD">
+    <value>Új jelszó: </value>
   </data>
   <data name="UPLOAD">
     <value>Feltöltés</value>
@@ -308,7 +317,7 @@
     <value>Nincs korlátozás</value>
   </data>
   <data name="REENTER_PASSPHRASE">
-    <value>Adja meg újra az azonosítási kifejezést:</value>
+    <value>Adja meg ismét a hozzáférési kódot:</value>
   </data>
   <data name="CHANGE.UNKNOWN">
     <value>Ismeretlen</value>
@@ -316,11 +325,11 @@
   <data name="DENY">
     <value>Vissza</value>
   </data>
-  <data name="LASTNAME">
-    <value>Vezetéknév</value>
-  </data>
   <data name="YESTERDAY">
     <value>tegnap</value>
+  </data>
+  <data name="SAMEOLDPASSWORD">
+    <value>A régi és az új jelszó nem lehet ugyanaz.</value>
   </data>
   <data name="ENTRY.DISKQUOTAEXCEPTION">
     <value>A feltöltést megszakította a rendszer, mert a fájl sértené a lemezkvótára vonatkozó házirendet.</value>
@@ -355,11 +364,20 @@
   <data name="DELETE">
     <value>Törlés</value>
   </data>
-  <data name="SHARED">
-    <value>Megosztva</value>
+  <data name="LOGINPASSWORDEXPIRED">
+    <value>A felhasználó jelszava lejárt.</value>
   </data>
   <data name="FILES.REMOVE">
     <value>eltávolítás</value>
+  </data>
+  <data name="HYPHEN">
+    <value> - </value>
+  </data>
+  <data name="USED">
+    <value>Használatban</value>
+  </data>
+  <data name="HOMEQUOTA">
+    <value>Saját kvóta</value>
   </data>
   <data name="FILES">
     <value>Fájlok</value>
@@ -370,8 +388,11 @@
   <data name="FIRSTLASTNAMESEP">
     <value>&amp;nbsp;</value>
   </data>
+  <data name="LOGINDISABLED">
+    <value>A bejelentkezés le van tiltva.</value>
+  </data>
   <data name="ENTERPASSPHRASE">
-    <value>Azonosítási kifejezés:</value>
+    <value>Hozzáférési kód:</value>
   </data>
   <data name="LOGIN.ACCOUNTLOCKED">
     <value>A fiók jelenleg zárolva van, nem használható.</value>
@@ -397,8 +418,8 @@
   <data name="IFOLDERS">
     <value>iFolder mappák</value>
   </data>
-  <data name="SAVE">
-    <value>Mentés</value>
+  <data name="PASSWORDS_NOT_MATCH">
+    <value>A beírt új jelszavak nem azonosak</value>
   </data>
   <data name="ENCRYPTIONCONDITION">
     <value>Titkosított iFolder mappát nem lehet megosztani</value>
@@ -410,7 +431,7 @@
     <value>/</value>
   </data>
   <data name="IFOLDER.NOPASSPHRASE">
-    <value> A titkosításhoz azonosítási kifejezést kell megadni</value>
+    <value> A titkosításhoz hozzáférési kódot kell megadni</value>
   </data>
   <data name="SEARCHUSERSTAG">
     <value>Felhasználók keresése a következő tartalommal:</value>
@@ -430,26 +451,23 @@
   <data name="SHAREWITH">
     <value>Megosztás</value>
   </data>
-  <data name="LOGOUT">
-    <value>Kijelentkezés</value>
+  <data name="USERACCOUNTEXPIRED">
+    <value>A felhasználói fiók lejárt.</value>
   </data>
   <data name="ENTRY.CONFIRMDELETE">
     <value>Biztosan törölni kívánja a kijelölt elemeket?</value>
   </data>
-  <data name="CREATE">
-    <value>Létrehozás</value>
+  <data name="PASSWORDMINLENGTH">
+    <value>A jelszó nem felel meg a minimális hosszkövetelménynek.</value>
   </data>
-  <data name="USED">
-    <value>Használatban</value>
+  <data name="FILTER">
+    <value>Szűrő:</value>
   </data>
   <data name="EDIT">
     <value>Szerkesztés</value>
   </data>
-  <data name="AVAILABLE">
-    <value>Használható</value>
-  </data>
-  <data name="GROUPACCESSEXCEPTION">
-    <value>A tagság nem törölhető, mert az a csoport, amelyhez Ön tartozik, írásvédett joggal rendelkezik.</value>
+  <data name="SAVE">
+    <value>Mentés</value>
   </data>
   <data name="LOGIN.IFOLDERSERVER">
     <value>iFolder kiszolgáló:</value>
@@ -475,6 +493,9 @@
   <data name="IFOLDER">
     <value>iFolder</value>
   </data>
+  <data name="INCORRECTOLDPASSWORD">
+    <value>Helytelen régi jelszó.</value>
+  </data>
   <data name="DATE">
     <value>Dátum</value>
   </data>
@@ -496,6 +517,9 @@
   <data name="NEW">
     <value>Új</value>
   </data>
+  <data name="SHARED">
+    <value>Megosztva</value>
+  </data>
   <data name="GERMAN">
     <value>német</value>
   </data>
@@ -511,14 +535,17 @@
   <data name="LOGIN.USERNAME">
     <value>Felhasználónév:</value>
   </data>
+  <data name="CANNOTCHANGEPASSWORD">
+    <value>A felhasználó nem változtathatja meg a jelszót.</value>
+  </data>
   <data name="ENTRY.ACCESSEXCEPTION">
     <value>Nem rendelkezik megfelelő jogokkal a kérés végrehajtásához.</value>
   </data>
   <data name="RIGHTS">
     <value>Hozzáférés</value>
   </data>
-  <data name="REMOVEMEMBERSHIP">
-    <value>Tagság megszüntetése</value>
+  <data name="CONFIRMNEWPASSWORD">
+    <value>Új jelszó megerősítése </value>
   </data>
   <data name="UPLOADFILES">
     <value>Fájlok feltöltése</value>
@@ -550,11 +577,20 @@
   <data name="IFOLDER.CONFIRMREMOVEDELETE">
     <value>Biztos benne, hogy megszünteti a hozzáférést / törli a kijelölt iFolder mappákat?</value>
   </data>
+  <data name="MESSAGE.WARNING">
+    <value>Figyelem:</value>
+  </data>
   <data name="LASTFIRSTNAMESEP">
     <value>,&amp;nbsp;</value>
   </data>
-  <data name="FILTER">
-    <value>Szűrő:</value>
+  <data name="ENGLISH">
+    <value>angol</value>
+  </data>
+  <data name="ENTRY.MAXUPLOADSIZEEXCEPTION">
+    <value>A feltöltést megszakított a rendszer, mert a fájl meghaladja az engedélyezett maximális fájlméretet.</value>
+  </data>
+  <data name="LASTNAME">
+    <value>Vezetéknév</value>
   </data>
   <data name="TEXTOVERWRITE">
     <value>Meglévő fájlok felülírása</value>
@@ -562,35 +598,47 @@
   <data name="ENTRY.NOTMOUNTEDEXCEPTION">
     <value>Nem érhető el a kiszolgálói tárolás</value>
   </data>
+  <data name="CHANGEPASSWORD">
+    <value>Jelszó módosítása</value>
+  </data>
   <data name="OWNER">
     <value>Tulajdonos</value>
   </data>
   <data name="SHARABLE">
     <value>Normál</value>
   </data>
-  <data name="RIGHTS.READWRITE">
-    <value>Olvasás/írás</value>
+  <data name="ITALIAN">
+    <value>olasz</value>
+  </data>
+  <data name="LOGOUT">
+    <value>Kijelentkezés</value>
   </data>
   <data name="SETTINGS">
     <value>Beállítások</value>
   </data>
-  <data name="MESSAGE.INFORMATION">
-    <value>Információ:</value>
+  <data name="USERNAME">
+    <value>Felhasználónév</value>
   </data>
   <data name="PASSPHRASE_INCORRECT">
-    <value>Érvénytelen azonosítási kifejezés </value>
+    <value>Érvénytelen hozzáférési kód </value>
   </data>
   <data name="RUSSIAN">
     <value>orosz</value>
   </data>
-  <data name="ACCEPT">
-    <value>Elfogadás</value>
-  </data>
   <data name="DELETEIFOLDER">
     <value>iFolder mappa törlése</value>
   </data>
-  <data name="ENTRY.FAILEDDOWNLOAD">
-    <value>A fájl nem volt elérhető letöltésre. Próbálja meg újra.</value>
+  <data name="EMPTY_PASSWORD">
+    <value>Üres jelszó</value>
+  </data>
+  <data name="RIGHTS.READWRITE">
+    <value>Olvasás/írás</value>
+  </data>
+  <data name="MESSAGE.INFORMATION">
+    <value>Információ:</value>
+  </data>
+  <data name="CREATE">
+    <value>Létrehozás</value>
   </data>
   <data name="ENTRIES">
     <value>Bejegyzések</value>
@@ -598,8 +646,8 @@
   <data name="ENTRY.MB">
     <value>MB</value>
   </data>
-  <data name="ENTRY.MAXUPLOADSIZEEXCEPTION">
-    <value>A feltöltést megszakított a rendszer, mert a fájl meghaladja az engedélyezett maximális fájlméretet.</value>
+  <data name="ACCEPT">
+    <value>Elfogadás</value>
   </data>
   <data name="SHARINGPOLICYVIOLATION">
     <value> A megosztás le van tiltva, ezért ezt az iFolder mappát nem lehet megosztani</value>
@@ -622,11 +670,11 @@
   <data name="FRENCH">
     <value>francia</value>
   </data>
-  <data name="ENGLISH">
-    <value>angol</value>
+  <data name="POLICY">
+    <value>Házirend</value>
   </data>
   <data name="ENTER_PASSPHRASE">
-    <value>Adja meg az azonosítási kifejezést     </value>
+    <value>Adja meg a hozzáférési kódot     </value>
   </data>
   <data name="SHARECONDITION">
     <value>A megosztható iFolder mappákat nem lehet titkosítani</value>
@@ -668,7 +716,10 @@
     <value>Az iFolder kiszolgáló és az iFolder Web Access közötti megbízáson alapuló kapcsolat sikertelen.</value>
   </data>
   <data name="NEXT">
-    <value>Következő</value>
+    <value>Tovább</value>
+  </data>
+  <data name="USERNOTFOUNDINSIMIAS">
+    <value>A felhasználó nem található az iFolder-adatbázisban.</value>
   </data>
   <data name="LOGIN.UNAUTHORIZED">
     <value>Adja meg újra a felhasználónevét és jelszavát.</value>
@@ -703,19 +754,28 @@
   <data name="IFOLDERNEW">
     <value>Új iFolder mappa</value>
   </data>
+  <data name="CURRENTPASSWORD">
+    <value>Aktuális jelszó: </value>
+  </data>
   <data name="FOLDERS">
     <value>Mappák</value>
   </data>
-  <data name="USERNAME">
-    <value>Felhasználónév</value>
+  <data name="LOGIN.SENDFAILED">
+    <value>Nem lehet kommunikálni az iFolder kiszolgálóval.</value>
   </data>
   <data name="REMOVEMEMBERDELETE">
     <value>Tagság eltávolítása / törlés</value>
   </data>
-  <data name="MESSAGE.WARNING">
-    <value>Figyelem:</value>
+  <data name="ENTRY.FAILEDDOWNLOAD">
+    <value>A fájl nem volt elérhető letöltésre. Próbálja meg újra.</value>
   </data>
   <data name="LOGIN.LANGUAGE">
     <value>Nyelv:</value>
+  </data>
+  <data name="NOITEMSAVAILABLE">
+    <value>Nincs elérhető {0}</value>
+  </data>
+  <data name="FAILEDTORESETPASSWORD">
+    <value>Nem sikerült a jelszó átállítása.</value>
   </data>
 </root>
